# zuspec-fe-py

./: .gitignore  Agents.md  ivpm.yaml  pyproject.toml
.clinerules/: 01_overview.md  02_developers.md
src/zuspec/fe/py/: __init__.py  context.py  expr_factory.py  static_path_mock.py  stmt_factory.py  transform_to_dm.py  type_factory.py  visitor.py
src/zuspec/py/: transform_to_arl_dm.py
tests/unit/: test_comp_ports.py  test_exec_sync.py  test_proc_stmt_api.py
